--- a/model.ipynb
+++ b/model.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sentiment\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import nltk\n",
+    "from nltk.stem import PorterStemmer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import linear_kernel"
+    "from sklearn.metrics.pairwise import linear_kernel\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,61 +191,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(12, 0.2804894794357595), (0, 0.2664930040571202), (40, 0.23187583549453455), (77, 0.19965571083896727), (87, 0.18776819459807056), (1, 0.1792622069587294), (49, 0.1416315229993893), (9, 0.14129113771006876), (50, 0.12969101023310117), (8, 0.11660082869322863)]\n"
+      "[(5, 0.2117494679590889), (12, 0.1975722831130848), (4, 0.07884159443148023), (85, 0.0780298221525802), (0, 0.07321360303211179), (45, 0.06620464055709173), (77, 0.06239523369271793), (3, 0.056115089438526576), (37, 0.05549369489780911), (38, 0.05549369489780911)]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
+       "5     Why isn’t the BJP fielding a candidate in Indi...\n",
        "12    Kashmir: Why Modi's BJP is not fighting electi...\n",
+       "4     Modi’s BJP wants the votes of India’s ‘Pasmand...\n",
+       "90    Cong files plaint with EC against BJP chief Na...\n",
        "0     Indian government agency spent millions to pro...\n",
-       "43    India election: how Narendra Modi’s BJP uses a...\n",
+       "50    How is Owaisi speaking so freely if there is H...\n",
        "82    BJP eyes hat-trick in Gujarat; Cong-AAP allian...\n",
-       "92    Exit polls predict third term for Modi: BJP-le...\n",
-       "1     Modi magic: Why Indian exit polls predict reco...\n",
-       "54    Modi exhorts Pawar, Thackeray to join BJP alli...\n",
-       "9            Dalit man bashed for not voting ruling BJP\n",
-       "55    Kejriwal's acknowledgement that BJP retaining ...\n",
-       "8        Why Is the RSS Distancing Itself From the BJP?\n",
+       "3     India’s exit polls predict a big majority for ...\n",
+       "39    'Vote for BJP': PM Modi writes to noted Kashi ...\n",
+       "40    Country's freedom, Constitution, democracy in ...\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_recommendations('India’s exit polls predict a big majority for Modi’s BJP-led alliance')\n"
+    "get_recommendations('India election 2024: Why isn’t Modi’s BJP fielding candidates in Kashmir?')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['tags'] = df['content'].copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ps = PorterStemmer()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def stems(text):\n",
+    "    l = []\n",
+    "    for i in text.split():\n",
+    "        l.append(ps.stem(i))\n",
+    "\n",
+    "    return ' '.join(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['tags'] = df['tags'].apply(stems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(max_features=5000, stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = cv.fit_transform(df['tags']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similartiy = cosine_similarity(vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(95, 95)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similartiy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['title'] == 'India election 2024: Why isn’t Modi’s BJP fielding candidates in Kashmir?'].index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(news):\n",
+    "    index = df[df['title'] == news].index[0]\n",
+    "    distances = sorted(list(enumerate(similartiy[index])), reverse=True, key=lambda x: x[1])\n",
+    "    for i in distances[1:6]:\n",
+    "        print(df.iloc[i[0]].title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why isn’t the BJP fielding a candidate in Indian-administered Kashmir?\n",
+      "Kashmir: Why Modi's BJP is not fighting elections in the Himalayan region\n",
+      "Modi’s BJP wants the votes of India’s ‘Pasmanda’ Muslims. Will they bite?\n",
+      "Indian government agency spent millions to promote BJP election slogans\n",
+      "BJP focus on threats rather than opportunities unlike INDIA alliance in election narratives: Madhavan Narayanan\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('India election 2024: Why isn’t Modi’s BJP fielding candidates in Kashmir?')"
+   ]
   },
   {
    "cell_type": "code",
